--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  color: #000000; font-weight:bold; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    Сайт ТРЦ:<span style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</span> 
+                                    Сайт ТРЦ: <a href="#" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a>
                                 </td>
                             </tr>
 
@@ -343,8 +343,8 @@
 
                             <tr>
                                 <td align="center" class="text_2-content"
-                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">E-mail:</span> user@gmail.com
+                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
+                                    <span style="text-decoration:none; color: #000000; font-weight: bold;">E-mail:</span> <a href="#" style="color: #00a0e2; text-decoration: underline;">user@gmail.com</a> 
                                 </td>
                             </tr>
 
