--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  color: #000000; font-weight:bold; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    Сайт ТРЦ: <a href="#" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a>
+                                    Сайт ТРЦ:<span style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</span> 
                                 </td>
                             </tr>
 
@@ -343,8 +343,8 @@
 
                             <tr>
                                 <td align="center" class="text_2-content"
-                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="text-decoration:none; color: #000000; font-weight: bold;">E-mail:</span> <a href="#" style="color: #00a0e2; text-decoration: underline;">user@gmail.com</a> 
+                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
+                                    <span style="font-weight: bold;">E-mail:</span> user@gmail.com
                                 </td>
                             </tr>
 
@@ -422,13 +422,6 @@
                                                     style="margin: 0; max-width: 600px; min-width: 320px; padding: 20px 0 28px 0; width: 26%;">
                                                     <img src="./images/rectangle.png" alt=""></td>
                                             </tr>
-                                            <!-- <tr> 
-                                <td align="center" class="btn-content" style=" margin: 0; max-width: 600px; min-width: 320px; padding: 24px 0 46px 0; text-align: center; width: 100%;"> 
-                                  <div class="btn" style="background-color: #54AF3A;; border-radius: 40px; max-width: 600px; min-width: 320px; width: 42%; padding: 14px 0 14px 0; display: block; margin:0 auto;">
-                                    <img style="vertical-align: bottom;" src="./images/telephone.svg" alt=""><a target="_blank" class="content-button" href="#" style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-weight: bold; letter-spacing: 0.05em; line-height: 21px; mso-line-height-rule: exactly; padding-left: 10px; text-decoration: none;">Позвонить</a></div>
-                                    
-                                </td>
-                              </tr>-->
                                         </tbody>
                                     </table>
                                 </td>
