--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
            .logo-footer{
                padding-top: 40px;
            }
-
         }
+        
+
+        
     </style>
     <table cellpadding="0" cellspacing="0" border="0" align="center" width="100%" class="flykids-email"
         style="border-collapse: collapse; border-spacing: 0; margin: 0 auto; max-width: 600px; mso-table-lspace: 0pt; mso-table-rspace: 0pt; padding: 0; text-align: center; width: 100%;">
@@ -323,13 +325,13 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  color: #000000; font-weight:bold; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    Сайт ТРЦ:<span style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</span> 
+                                    Сайт ТРЦ: <a href="#" target="_blank" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a> 
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
-                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
+                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 18px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
                                     <span style="font-weight: bold;">Предполагаемая площадь:</span> 2500 кв.м.
                                 </td>
                             </tr>
