--- a/index.html
+++ b/index.html
@@ -297,28 +297,28 @@
                         <tbody>
                             <tr>
                                 <td align="center" class="title-block" style="max-width: 540px; width: 90%; min-width: 288px; color: #e5097f; display: inline-block;font-family: Arial, Helvetica, sans-serif;font-size: 30px;font-style: normal;font-weight: bold;letter-spacing: 0.02em;line-height: 34px;margin: 0; padding-bottom: 30px; padding-top: 40px; mso-line-height-rule: exactly;padding: 51px 0 30px 0;text-align: center;">
-                                    Новое предложение по аренде!</td>
+                                    Нова пропозиція по аренді!</td>
                             </tr>
 
 
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left; width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Номер предложения:</span> №1
+                                    <span style="font-weight: bold;">Номер пропозиції:</span> №1
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left; width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Город:</span> Полтава
+                                    <span style="font-weight: bold;">Місто:</span> Полтава
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Торговый центр: </span> Экватор
+                                    <span style="font-weight: bold;">Торгівельний центр: </span> Екватор
                                 </td>
                             </tr>
 
@@ -332,7 +332,7 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 18px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Предполагаемая площадь:</span> 2500 кв.м.
+                                    <span style="font-weight: bold;">Імовірна площа:</span> 2500 кв.м.
                                 </td>
                             </tr>
 
@@ -353,36 +353,22 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 10px;">
-                                    <span style="font-weight: bold;">Предложение:</span>
+                                    <span style="font-weight: bold;">Пропозиція:</span>
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
-                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 125%; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 30px;">
-                                    Здравствуйте! Хочу предложить открыть Fly Kids в г. Полтава. Экватор - крупная
-                                    национальная сеть торгово-развлекательных центров, созданная для комфорта и
-                                    удовольствия каждого своего посетителя, которая объединяет яркий шопинг и веселый
-                                    запоминающийся досуг для всей семьи. На одной территории Вы найдете бутики ведущих
-                                    мировых и украинских брендов модной одежды и обуви, ювелирные украшения, товары для
-                                    дома, мебель, бытовая техника и др. Экватор - это выгодный способ приобрести все в
-                                    одном месте. Программы развлекательных мероприятий включает разнообразные активности
-                                    для взрослых и детей: шоу-программы, цирковые выступления, выставки, концерты
-                                    украинских звезд, конкурсы, спортивные соревнования национального масштаба,
-                                    фестивали и многое другое.
+                                    style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 125%; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 0;">
+                                    Добрий день! Хочу запропонувати відкрити Fly Kids в м. Полтава. Екватор - велика національна мережа торгово-розважальних центрів, створена для комфорту і задоволення кожного свого відвідувача, яка об'єднує яскравий шопінг і веселе дозвілля для всієї родини. На одній території Ви знайдете бутики провідних світових і українських брендів модного одягу і взуття, ювелірні прикраси, товари для  будинку, меблі, побутова техніка та ін. Екватор - це вигідний спосіб придбати все в одному місці. Програми розважальних заходів включає різноманітні активності  для дорослих і дітей: шоу-програми, циркові виступи, виставки, концерти  українських зірок, конкурси, спортивні змагання національного масштабу, фестивалі та багато іншого.
+
                                 </td>
                             </tr>
 
-                            <tr>
-                                <td align="center" class="btn-content" style="margin: 0; max-width: 600px; min-width: 320px; padding: 24px 0 20px 0; text-align: center; width: 100%;">
-                                  <a target="_blank" class="content-button" href="#" style="background-color: #E5097F; border-radius: 40px; color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-weight: bold; letter-spacing: 0.05em; line-height: 21px; mso-line-height-rule: exactly; padding: 14px 40px; text-decoration: none;">Ответить на почту</a>
-                                </td>
-                              </tr>
-
                               <tr> 
-                                <td align="center" class="btn-content-link" style=" margin: 0; max-width: 600px; min-width: 320px; padding: 20px 0 0 0; text-align: center; width: 100%;"> 
+                                <td align="center" class="btn-content-link" style=" margin: 0; max-width: 600px; min-width: 320px; padding: 30px 0 0 0; text-align: center; width: 100%;"> 
                                   <div class="btn" style="background-color: #54AF3A;; border-radius: 40px; max-width: 600px; min-width: 260px; width: 42%; padding: 14px 0 14px 0; display: block; margin:0 auto;">
-                                    <img style="vertical-align: bottom;" src="./images/telephone.svg" alt=""><a target="_blank" class="content-button" href="#" style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-weight: bold; letter-spacing: 0.05em; line-height: 21px; mso-line-height-rule: exactly; padding-left: 10px; text-decoration: none;">Позвонить</a></div>
+                                    <img style="vertical-align: bottom;" src="./images/telephone.svg" alt=""><a target="_blank" class="content-button" href="#" style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-weight: bold; letter-spacing: 0.05em; line-height: 21px; mso-line-height-rule: exactly; padding-left: 10px; text-decoration: none;">Зателефонувати</a></div>
                                     
                                 </td>
                               </tr>
