--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
             .btn-content-link{
                 display: none;
             }
+
+            .logo-footer{
+               padding-top: 54px;
+           }
             
         }
 
@@ -226,6 +230,10 @@
             .btn-content-link{
                 display: none;
             }
+
+            .logo-footer{
+               padding-top: 54px;
+           }
             
         }
 
@@ -375,7 +383,7 @@
 
                             <tr>
                                 <td align="center" class="logo-footer"
-                                    style="margin: 0; max-width: 600px; min-width: 320px; width: 26%; padding-bottom: 40px; padding-top: 54px;">
+                                    style="margin: 0; max-width: 600px; min-width: 320px; width: 26%; padding-bottom: 40px;">
                                     <img srcset="./images/bird.png 328w, ./images/bird@2x.png 656w" alt="" sizes="328px"
                                         src="./images/bird.png" width="328" height="189"></td>
                             </tr>
