--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <tbody>
                             <tr>
                                 <td align="center" class="title-block" style="max-width: 540px; width: 90%; min-width: 288px; color: #e5097f; display: inline-block;font-family: Arial, Helvetica, sans-serif;font-size: 30px;font-style: normal;font-weight: bold;letter-spacing: 0.02em;line-height: 34px;margin: 0; padding-bottom: 30px; padding-top: 40px; mso-line-height-rule: exactly;padding: 51px 0 30px 0;text-align: center;">
-                                    Нова пропозиція по аренді!</td>
+                                    Нова пропозиція по оренді!</td>
                             </tr>
 
 
@@ -333,7 +333,7 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  color: #000000; font-weight:bold; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    Сайт ТРЦ: <a href="#" target="_blank" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a> 
+                                    ТРЦ: <a href="#" target="_blank" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a> 
                                 </td>
                             </tr>
 
