--- a/index.html
+++ b/index.html
@@ -326,21 +326,21 @@
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Торгівельний центр: </span> Екватор
+                                    <span style="font-weight: bold;">ТРЦ: </span> Екватор
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 16px;  color: #000000; font-weight:bold; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    ТРЦ: <a href="#" target="_blank" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a> 
+                                    Сайт ТРЦ: <a href="#" target="_blank" style="font-weight: normal; color: #00a0e2; text-decoration: underline;"> https://ekvator.ua/</a> 
                                 </td>
                             </tr>
 
                             <tr>
                                 <td align="center" class="text_2-content"
                                     style="color: #000000; display: inline-block; font-family: Arial, sans-serif; font-size: 16px; line-height: 18px; color: #000000; font-weight:normal; margin: 0; max-width: 600px; mso-line-height-rule: exactly; padding: 0; text-align: left;  width: 90%; padding-bottom: 15px;">
-                                    <span style="font-weight: bold;">Імовірна площа:</span> 2500 кв.м.
+                                    <span style="font-weight: bold;">Площа:</span> 2500 кв.м.
                                 </td>
                             </tr>
 
